@@ -29,7 +29,11 @@ New features
 	  Development Team" as the copyright holder.  We give more details about exactly
 	  what this means in this file.  All developer should read this and use the new
 	  banner in all IPython source code files.
-    * sh profile: ./foo runs foo as system command, no need to do !./foo anymore
+	* sh profile: ./foo runs foo as system command, no need to do !./foo anymore
+	* String lists now support 'sort(field, nums = True)' method (to easily
+	  sort system command output). Try it with 'a = !ls -l ; a.sort(1, nums=1)'
+
+	
 
 Bug fixes
 ---------
